# numerical_opt

./: READEME.md  README.md
src/opt_solver/: CMakeLists.txt  package.xml
src/opt_solver/include/opt_solver/: bfgs.h  cautious_bfgs.h  func.hpp  gradient_descent.h  lbfgs.h  newton.h  newton_cg.h
src/opt_solver/src/: bfgs.cpp  cautious_bfgs.cpp  gradient_descent.cpp  lbfgs.cpp  newton.cpp  newton_cg.cpp
src/test_pkg/: CMakeLists.txt  package.xml
src/test_pkg/launch/: test_solver_node.launch
src/test_pkg/src/: solver_example.cpp
